Rework FPS modifier setting and GUI, clean up some dialogs

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -200,29 +200,27 @@ END
 // Dialog
 //
 
-IDD_ABOUT DIALOGEX 0, 0, 200, 216
-STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "About Mupen64"
+IDD_ABOUT DIALOGEX 0, 0, 201, 218
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "Ok",IDOK,5,197,60,14
-    PUSHBUTTON      "Github",IDC_GITREPO,69,197,60,14
-    PUSHBUTTON      "Website",IDC_WEBSITE,134,197,60,14
-    GROUPBOX        "About this program",IDC_STATIC,5,65,189,127
-    LTEXT           "Author:\r\n     Hacktarux (hacktarux@yahoo.fr)\r\n\nWindows port:\r\n     ShadowPrince (shadow@emulation64.com)\r\n     linker (linker@mail.bg)\r\n\r\nContributors:\r\n     Codex, Falcon4ever, Pir4nhaX, Malcolm,\r\n     Olivieryuyu\r\n\r\nThanks to the many others who helped",IDC_STATIC,13,82,173,104
-    LTEXT           "Mupen 64 1.1.0",IDC_STATIC,70,30,120,12
+    DEFPUSHBUTTON   "Ok",IDOK,132,198,60,14
+    PUSHBUTTON      "Github",IDC_GITREPO,6,198,60,14
+    PUSHBUTTON      "Website",IDC_WEBSITE,66,198,66,14
+    CONTROL         "Author:\r\n     Hacktarux (hacktarux@yahoo.fr)\r\n\nWindows port:\r\n     ShadowPrince (shadow@emulation64.com)\r\n     linker (linker@mail.bg)\r\n\r\nContributors:\r\n     Codex, Falcon4ever, Pir4nhaX, Malcolm,\r\n     Olivieryuyu\r\n\r\nThanks to the many others who helped",IDC_STATIC,
+                    "Static",SS_LEFTNOWORDWRAP | WS_GROUP,12,6,180,186
 END
 
 IDD_ADVANCED_OPTIONS DIALOGEX 0, 0, 231, 273
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Common Options",IDC_COMMON,6,6,216,60
     CONTROL         "LUA Double Buffer",IDC_CLUADOUBLEBUFFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,120,96,8
     CONTROL         "Pause emulation when window is not active",IDC_PAUSENOTACTIVE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,114,8
-    CONTROL         "Show toolbar",IDC_GUI_TOOLBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,18,76,8
-    CONTROL         "Show statusbar",IDC_GUI_STATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,30,76,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,114,8
+    CONTROL         "Show toolbar",IDC_GUI_TOOLBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,76,8
+    CONTROL         "Show statusbar",IDC_GUI_STATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,76,10
     GROUPBOX        "Compatibility Options",IDC_COMPATIBILITY,7,71,215,73
     CONTROL         "No audio delay",IDC_NO_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,84,96,10
     CONTROL         "No compiled jump",IDC_NO_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,96,96,8
@@ -261,27 +259,6 @@ BEGIN
     GROUPBOX        "A/V Synchronization",IDC_STATIC,12,78,198,48
 END
 
-IDD_AUDIT_ROMS_DIALOG DIALOGEX 0, 0, 183, 138
-STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Audit ROMs"
-FONT 8, "MS Shell Dlg", 0, 0, 0x0
-BEGIN
-    GROUPBOX        "",IDC_STATIC,5,2,174,56
-    LTEXT           "Total ROMs:",IDC_TOTAL_ROMS_TEXT,102,70,44,8
-    LTEXT           "",IDC_TOTAL_ROMS,145,70,19,8
-    LTEXT           "Current ROM:",IDC_CURRENT_ROM_TEXT,12,70,48,8
-    LTEXT           "",IDC_CURRENT_ROM,59,70,16,8
-    LTEXT           "File Location:",IDC_ROM_FULLPATH_TEXT,12,11,131,8
-    DEFPUSHBUTTON   "Start",IDC_AUDIT_START,12,118,50,14
-    PUSHBUTTON      "Stop",IDC_AUDIT_STOP,68,118,50,14,WS_DISABLED
-    PUSHBUTTON      "Close",IDC_AUDIT_CLOSE,122,118,50,14
-    EDITTEXT        IDC_ROM_FULLPATH,11,23,160,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER,WS_EX_STATICEDGE
-    RTEXT           "",IDC_MD5_PROGRESS,148,11,23,8
-    CONTROL         "",IDC_CURRENT_ROM_PROGRESS,"msctls_progress32",PBS_SMOOTH,11,38,160,14,WS_EX_STATICEDGE
-    GROUPBOX        "",IDC_STATIC,5,60,174,46
-    CONTROL         "",IDC_TOTAL_ROMS_PROGRESS,"msctls_progress32",PBS_SMOOTH,11,84,160,14,WS_EX_STATICEDGE
-END
-
 IDD_LUAWINDOW DIALOGEX 0, 0, 240, 166
 STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "LUA Instance"
@@ -294,17 +271,6 @@ BEGIN
     PUSHBUTTON      "Clear",IDC_BUTTON_LUACLEAR,109,23,40,18
     PUSHBUTTON      "Stop",IDC_BUTTON_LUASTOP,151,23,40,18,WS_DISABLED
     EDITTEXT        IDC_TEXTBOX_LUACONSOLE,7,43,226,116,ES_MULTILINE | ES_READONLY | WS_VSCROLL
-END
-
-IDD_LUAWINDOW_SIMPLIFIED DIALOGEX 0, 0, 140, 50
-STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-CAPTION "LUA Instance"
-FONT 8, "Ms Shell Dlg", 0, 0, 0x1
-BEGIN
-    PUSHBUTTON      "Run",IDC_BUTTON_LUASTATE,10,10,40,18
-    PUSHBUTTON      "Browse",IDC_BUTTON_LUABROWSE,50,10,40,18
-    PUSHBUTTON      "Stop",IDC_BUTTON_LUASTOP,90,10,40,18,WS_DISABLED
-    EDITTEXT        IDC_TEXTBOX_LUASCRIPTPATH,10,28,119,14,ES_AUTOHSCROLL
 END
 
 IDD_DIRECTORIES DIALOGEX 0, 0, 231, 262
@@ -459,7 +425,7 @@ BEGIN
 END
 
 IDD_MESSAGES DIALOGEX 0, 0, 231, 262
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Alerts",IDC_MESSAGES,6,6,216,42
@@ -467,21 +433,21 @@ BEGIN
     CONTROL         "Alert for save errors",IDC_ALERTSAVESTATEWARNINGS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,18,84,8
     GROUPBOX        "FPS / VIs",IDC_FPSTITLE,6,54,215,96
-    CONTROL         "Limit VIs (auto)",IDC_LIMITFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,67,204,8
-    CONTROL         "Use Speed Modifier",IDC_SPEEDMODIFIER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,24,78,192,10
-    CONTROL         "Show FPS",IDC_SHOWFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,108,78,8
-    CONTROL         "Show VIs",IDC_SHOWVIS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,120,78,8
+    CONTROL         "Show FPS",IDC_SHOWFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,78,8
+    CONTROL         "Show VIs",IDC_SHOWVIS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,78,8
     GROUPBOX        "CPU Core",IDC_CPUCORE,6,156,216,48
     CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,168,204,8
     CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,180,204,8
     CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,192,204,8
     EDITTEXT        IDC_SKIPFREQ,114,132,78,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,132,96,12,SS_CENTERIMAGE
-    CONTROL         "0-index statusbar",IDC_0INDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,75,8
-    CONTROL         "",IDC_FPSTRACKBAR,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,24,91,192,12
+    LTEXT           "Fast forward skip frequency",IDC_FASTFORWARDSKIPFREQ,12,132,96,12,SS_CENTERIMAGE
+    CONTROL         "0-index statusbar",IDC_0INDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,84,75,8
     PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,132,14,12
     CONTROL         "State-independent savestate loading",IDC_ALLOW_ARBITRARY_SAVESTATE_LOADING,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,120,8
+    LTEXT           "Speed Modifier",IDC_STATIC,12,66,54,12,SS_CENTERIMAGE
+    CONTROL         "",IDC_SPEED_MODIFIER_SLIDER,"msctls_trackbar32",TBS_NOTICKS | WS_TABSTOP,66,66,96,12
+    PUSHBUTTON      "Reset",IDC_SPEED_MODIFIER_RESET,168,66,48,12
 END
 
 IDD_MOVIE_PLAYBACK_DIALOG DIALOGEX 0, 0, 342, 342
@@ -760,6 +726,8 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_ABOUT, DIALOG
     BEGIN
+        RIGHTMARGIN, 200
+        BOTTOMMARGIN, 216
     END
 
     IDD_ADVANCED_OPTIONS, DIALOG
@@ -770,15 +738,7 @@ BEGIN
     BEGIN
     END
 
-    IDD_AUDIT_ROMS_DIALOG, DIALOG
-    BEGIN
-    END
-
     IDD_LUAWINDOW, DIALOG
-    BEGIN
-    END
-
-    IDD_LUAWINDOW_SIMPLIFIED, DIALOG
     BEGIN
     END
 
@@ -883,6 +843,11 @@ BEGIN
 END
 
 IDD_MUPENERROR AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_ABOUT AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
